<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/btn_share" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/handWriting1"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/btn_save" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/iv_handwrite"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_penColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_strokewidth_unchecked"
            android:gravity="center"
            android:scaleType="matrix"
            android:text="@string/strokeWidth"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_strokeWidth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_color_unchecked"
            android:gravity="center"
            android:scaleType="centerInside"
            android:text="@string/paintcolor"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/btn_cleanscreen_unchecked"
            android:gravity="center"
            android:scaleType="centerInside"
            android:text="@string/clear"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>