<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title_processImg_activity"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="9"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imgView_picactivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/enhanceLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerInside"
                android:src="@drawable/enhance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/enhance" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/effectsLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerInside"
                android:src="@drawable/effects" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/effects" />
        </LinearLayout>

     <!--    <LinearLayout
            android:id="@+id/handWritingLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerInside"
                android:src="@drawable/btn_handwriting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/handWriting" />
        </LinearLayout>
 -->
        <LinearLayout
            android:id="@+id/broaderLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerInside"
                android:src="@drawable/btn_broader" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/broader" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rotateLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scaleType="centerInside"
                android:src="@drawable/btn_rotate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rotate" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>