<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/btn_share" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/title_processImg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title_processImg"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/btn_save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_process"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/proSeekBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/bankLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <SeekBar
                android:id="@+id/proImgseekBar"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_weight="2"
                android:max="100"
                android:progress="1"
                android:progressDrawable="@drawable/seek_greed_drawable"
                android:thumb="@drawable/seekbar_green_thumb"
                android:visibility="gone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/seekBarHint"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />
        </LinearLayout>
    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/roundConcer"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_roundConcer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_roundconcer" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/roundConcer" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/oldremeber"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_oldremeber"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_oldremeber" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/oldremeber" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sharpen"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_sharpen"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_sharpen" />

                <TextView
                    android:id="@+id/img_oldremeber"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sharpen" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/beam"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_beam"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_beam" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/beam" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rilievo"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_rilievo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_rilievo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rilievo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/negative"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_negative"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_negative" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/negative" />
            </LinearLayout>

            <!--
            <LinearLayout
                android:id="@+id/blurImage"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_blurImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_blurimage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/blurImage" />
           
            -->
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>