<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/btn_share" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title_rotate"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/btn_save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/img_rotate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_toolbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_turnleft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="contentDescription"
            android:drawableTop="@drawable/btn_turnleft_unchecked"
            android:scaleType="center"
            android:text="@string/turnleft"
            android:textSize="15sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_turnright"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="contentDescription"
            android:drawableTop="@drawable/btn_turnright_unchecked"
            android:scaleType="center"
            android:text="@string/turnright"
             android:textSize="15sp"
            android:textColor="@color/white"  />

        <Button
            android:id="@+id/btn_reverse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="contentDescription"
            android:drawableTop="@drawable/btn_reserve_unchecked"
            android:text="@string/reverse"
            android:textSize="15sp"
            android:textColor="@color/white"  />
    </LinearLayout>

</LinearLayout>